--- a/samples/bookinfo/src/ratings/package.json
+++ b/samples/bookinfo/src/ratings/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "httpdispatcher": "1.0.0",
     "mongodb": "^2.2.31",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "pg": "^7.2.0"
   }
 }
